[gd_scene load_steps=48 format=3 uid="uid://c8quaugkapyry"]

[ext_resource type="Script" uid="uid://c3sl6jwbqyvyi" path="res://scripts/gameplay/Show_operation.gd" id="1_0d5ff"]
[ext_resource type="Texture2D" uid="uid://c4ikplght8awa" path="res://assets/Free Pixel Art Forest/Preview/Background.png" id="2_1o26h"]
[ext_resource type="Script" uid="uid://d1emvf3g8jpj" path="res://scripts/gameplay/operation_generator.gd" id="3_jcpkf"]
[ext_resource type="PackedScene" uid="uid://cam84mvw4u5kt" path="res://scenes/gameplay/FallingQuestion.tscn" id="4_wr2py"]
[ext_resource type="AudioStream" uid="uid://b27y8uwjrvonh" path="res://assets/audio/sfx/menu/button_click.ogg" id="5_1o26h"]
[ext_resource type="AudioStream" uid="uid://b5bhjxjuu3u3a" path="res://assets/audio/music/gameplay/Teste - MatC (6).mp3" id="6_t0mm7"]
[ext_resource type="AudioStream" uid="uid://b2mhui4d0mu71" path="res://assets/audio/sfx/gameplay/hit_the_correct_answer.ogg" id="7_wr2py"]
[ext_resource type="Texture2D" uid="uid://cuwa1qjt7g2yn" path="res://assets/Player test/death.png" id="8_t0mm7"]
[ext_resource type="Texture2D" uid="uid://211we30a2e3o" path="res://assets/Player test/idle.png" id="9_1ey6o"]
[ext_resource type="Texture2D" uid="uid://blui8uvbrxhcl" path="res://assets/Player test/run.png" id="10_lehme"]

[sub_resource type="ViewportTexture" id="ViewportTexture_l1v76"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1o26h"]
size = Vector2(821.385, 46.8192)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdl7e"]
atlas = ExtResource("8_t0mm7")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_khinc"]
atlas = ExtResource("8_t0mm7")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_bruh7"]
atlas = ExtResource("8_t0mm7")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_abqjs"]
atlas = ExtResource("9_1ey6o")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_63cyx"]
atlas = ExtResource("9_1ey6o")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cfjex"]
atlas = ExtResource("9_1ey6o")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_gn8i0"]
atlas = ExtResource("9_1ey6o")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu4a1"]
atlas = ExtResource("8_t0mm7")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_70d11"]
atlas = ExtResource("8_t0mm7")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cw2d6"]
atlas = ExtResource("8_t0mm7")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_si16d"]
atlas = ExtResource("10_lehme")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfssh"]
atlas = ExtResource("10_lehme")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy5ud"]
atlas = ExtResource("10_lehme")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jtfw"]
atlas = ExtResource("10_lehme")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqe22"]
atlas = ExtResource("10_lehme")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kx34"]
atlas = ExtResource("10_lehme")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_apqp6"]
atlas = ExtResource("10_lehme")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yk2eu"]
atlas = ExtResource("10_lehme")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oev5t"]
atlas = ExtResource("10_lehme")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kj78w"]
atlas = ExtResource("10_lehme")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_63228"]
atlas = ExtResource("10_lehme")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfdlt"]
atlas = ExtResource("10_lehme")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_yi6jf"]
atlas = ExtResource("10_lehme")
region = Rect2(320, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_luwoi"]
atlas = ExtResource("10_lehme")
region = Rect2(400, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qub4u"]
atlas = ExtResource("10_lehme")
region = Rect2(480, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_msbv2"]
atlas = ExtResource("10_lehme")
region = Rect2(560, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo6fo"]
atlas = ExtResource("10_lehme")
region = Rect2(560, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q84vp"]
atlas = ExtResource("10_lehme")
region = Rect2(480, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_53qhv"]
atlas = ExtResource("10_lehme")
region = Rect2(400, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh2ad"]
atlas = ExtResource("10_lehme")
region = Rect2(320, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7vwb"]
atlas = ExtResource("10_lehme")
region = Rect2(240, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7tmr"]
atlas = ExtResource("10_lehme")
region = Rect2(160, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_py6rc"]
atlas = ExtResource("10_lehme")
region = Rect2(80, 160, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5snj"]
atlas = ExtResource("10_lehme")
region = Rect2(0, 160, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_3wsyr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdl7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khinc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bruh7")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abqjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63cyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cfjex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gn8i0")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu4a1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70d11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cw2d6")
}],
"loop": true,
"name": &"Jump",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_si16d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfssh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy5ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jtfw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqe22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kx34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apqp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yk2eu")
}],
"loop": true,
"name": &"Run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oev5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kj78w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63228")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfdlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yi6jf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_luwoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qub4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msbv2")
}],
"loop": true,
"name": &"Run_Down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo6fo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q84vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53qhv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh2ad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7vwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7tmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_py6rc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5snj")
}],
"loop": true,
"name": &"Run_Up",
"speed": 12.0
}]

[node name="Main" type="Node2D"]
script = ExtResource("1_0d5ff")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(413.999, 359.499)
scale = Vector2(0.881468, 0.906685)
texture = ExtResource("2_1o26h")

[node name="OperationGenerator" type="Node2D" parent="."]
position = Vector2(469, 419.5)
script = ExtResource("3_jcpkf")

[node name="QuestionLabel" type="Label" parent="."]
offset_left = 859.0
offset_top = 149.0
offset_right = 1109.0
offset_bottom = 172.0
scale = Vector2(1.49, 1.49)

[node name="InputField_for_answer" type="LineEdit" parent="."]
offset_left = 853.465
offset_top = 478.0
offset_right = 1009.99
offset_bottom = 509.0
scale = Vector2(2.31579, 2.0303)
placeholder_text = "Digite sua resposta"
keep_editing_on_text_submit = true
emoji_menu_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="SubmitButton" type="Button" parent="."]
offset_left = 923.0
offset_top = 547.0
offset_right = 984.0
offset_bottom = 578.0
scale = Vector2(2.31579, 2.0303)
text = "Enviar"
icon = SubResource("ViewportTexture_l1v76")

[node name="return_to_menu" type="Button" parent="."]
offset_left = 867.0
offset_top = 619.0
offset_right = 1026.19
offset_bottom = 650.0
scale = Vector2(1.695, 1.695)
text = "Voltar para o menu"

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="FallingQuestion" parent="." instance=ExtResource("4_wr2py")]
position = Vector2(6, 2)

[node name="FailZone" type="Area2D" parent="."]
position = Vector2(4, 505)
scale = Vector2(0.998313, 2.98522)
gravity = 979.275

[node name="CollisionShape2D" type="CollisionShape2D" parent="FailZone"]
position = Vector2(409.691, 48.1984)
shape = SubResource("RectangleShape2D_1o26h")

[node name="buttonclick" type="AudioStreamPlayer" parent="."]
process_priority = 1
stream = ExtResource("5_1o26h")
volume_db = -20.0

[node name="ost" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_t0mm7")
volume_db = -20.0
autoplay = true
parameters/looping = false

[node name="right_answer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wr2py")

[node name="player_sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(418, 626)
scale = Vector2(7.2, 7.2)
sprite_frames = SubResource("SpriteFrames_3wsyr")
animation = &"Jump"
frame = 1
frame_progress = 0.719917

[connection signal="text_submitted" from="InputField_for_answer" to="." method="_on_input_field_for_answer_text_submitted"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="return_to_menu" to="." method="_on_return_to_menu_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
